public/frontend/styles/style.css
/* ... */
@media screen and (max-width: 767px) {
    .section__content {
        justify-content: center;
    }

    .section__content > * {
        width: 100%;
        max-width: 100%;
    }

    .profile-reward {
        display: block;
    }

    .section__profile .card {
        border: none;
    }
}

@media screen and (min-width: 768px ) {
    .section__content > * {
        flex-shrink: 0;
        max-width: 100%;
        padding-right: calc(var(--bs-gutter-x) * .5);
        padding-left: calc(var(--bs-gutter-x) * .5);
        margin-top: var(--bs-gutter-y);
    }

    .section__profile .card {
        border: 1px solid #ffffff;
    }
}

@media screen and (max-width: 767px) {
    .home__logo {
        width: 60%;
        height: 60%;
    }

    .section__home2 .title {
        text-align: center;
    }

    .section__home2 .title h2 {
        font-size: 2rem;
        padding: .75rem 2rem;
        cursor: default;
        font-size: 1.5rem;
    }

    .section__home3 .home3__content {
        text-align: center;
        align-items: center;
    }

    .point__digit_wrapper {
        padding: 0 .75rem;
    }

    .point__counter .point__digit {
        font-size: 3rem;
    }

    .shops .shop-icon {
        margin-bottom: .5rem;
        border-radius: 50%;
        width: 36px;
        height: 36px;
    }

    .shops .shop-icon img {
        width: 36px;
        height: 36px;
        padding: .5rem;
    }
}

@media screen and (min-width: 1400px) {
    .home__logo {
        width: 60%;
        height: 60%;
    }
}

.copyright {
    font-size: 12px;
}

/* Safari and Chrome */
@-webkit-keyframes rotating {
    from {
        -webkit-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }

    to {
        -webkit-transform: rotate(360deg);
        -o-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

@keyframes rotating {
    from {
        -ms-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -webkit-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }

    to {
        -ms-transform: rotate(360deg);
        -moz-transform: rotate(360deg);
        -webkit-transform: rotate(360deg);
        -o-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

@-webkit-keyframes rotatingCounterClockwise {
    from {
        -webkit-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }

    to {
        -webkit-transform: rotate(-360deg);
        -o-transform: rotate(-360deg);
        transform: rotate(-360deg);
    }
}

@keyframes rotatingCounterClockwise {
    from {
        -ms-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -webkit-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }

    to {
        -ms-transform: rotate(-360deg);
        -moz-transform: rotate(-360deg);
        -webkit-transform: rotate(-360deg);
        -o-transform: rotate(-360deg);
        transform: rotate(-360deg);
    }
}

/* Main Content */

/* .content-wrapper {
    max-width: 768px;
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin: auto;
}

.content-title {
    font-size: 2.5rem;
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: 1rem;
}

.content-subtitle {
    font-weight: normal;
    font-size: 1rem;
}

.content-logo {
    max-width: 150px;
    margin-bottom: 1rem;
}

.or-login {
    overflow: hidden;
    text-align: center;
}

.or-login:before,
.or-login:after {
    background-color: #ffffff;
    content: "";
    display: inline-block;
    height: 1px;
    position: relative;
    vertical-align: middle;
    width: 50%;
}

.or-login:before {
    right: 0.5em;
    margin-left: -50%;
}

.or-login:after {
    left: 0.5em;
    margin-right: -50%;
}

.card-pick {
    margin-bottom: 2rem;
}

.card-pick>.row {
    display: block;
    overflow-x: auto;
    white-space: nowrap;
}

.card-pick>.row>.col-4 {
    display: inline-block;
}

.card-pick img {
    max-width: 96px;
}

.preview-image>img {
    display: inline;
    max-width: 300px;
}

@media screen and (min-width: 768px) {
    .content-logo {
        max-width: 250px;
    }
} */

/*
* Member Point Card
*/

/* .member-point-card .profile-icon {
    width: 64px;
    height: 64px;
    border-radius: 50%;
}

.member-point-card .profile-name {
    margin-top: 1rem;
    margin-bottom: 1rem;
    font-weight: 600;
}

.member-point-card .member-point {
    justify-content: center;
}

.member-point-card .point-wrapper {
    width: auto;
}

.member-point-nav {
    --bs-btn-padding-x: 2rem;
    --bs-btn-padding-y: .75rem;
    --bs-btn-font-weight: 600;
    --bs-btn-color: rgb(69, 69, 69);
    --bs-btn-bg: var(--bs-white);
    --bs-btn-border-color: rgb(215 2 39);
    --bs-btn-border-radius: 3rem;
    --bs-btn-hover-color: rgb(218, 21, 56);
    --bs-btn-hover-bg: rgb(228, 228, 228);
    --bs-btn-hover-border-color: rgb(218, 21, 56);
    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
    --bs-btn-active-color: rgb(215 2 39);
    --bs-btn-active-bg: var(--bs-white);
    --bs-btn-active-border-color: var(--bs-white);
    --bs-btn-font-weight: bold;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: var(--bs-btn-padding-y) 0;
    font-family: var(--bs-btn-font-family);
    font-size: var(--bs-btn-font-size);
    font-weight: var(--bs-btn-font-weight);
    line-height: var(--bs-btn-line-height);
    color: var(--bs-btn-color);
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    user-select: none;
    background-color: rgb(255, 255, 255);
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.member-point-nav.active {
    color: var(--bs-btn-active-color);
}

.member-point-nav .btn-icon {
    margin-right: 1rem;
}
/* ... */

